--- a/_config.yml
+++ b/_config.yml
@@ -1,26 +1,21 @@
 title: Ohm.codes
-email: your-email@example.com
 
-author:
-  name: ""
-  email: ""
+author: Mads Ohm Larsen
 
 description: >
   A blog about programming, technology and other things.
 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://ohm.codes" # the base hostname & protocol for your site, e.g. http://example.com
-github_username: omegahm
-
-# Build settings
-theme: minima
-
-header_pages:
-  - about.md
-
-minima:
-  skin: solarized
-  date_format: "%B %-d, %Y"
 
 plugins:
   - jekyll-feed
+  - jekyll-postcss
+  - jekyll-inline-svg
+  - jekyll-redirect-from
+
+feed:
+  path: blog.atom
+
+postcss:
+  cache: false
