--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
 	"dependencies": {
+		"postcss": "^8.4.33",
+		"postcss-cli": "^11.0.0",
 		"postcss-import": "^16.0.0",
 		"yarn": "^1.22.21"
 	},
@@ -8,7 +10,6 @@
 		"autoprefixer": "^10.4.17",
 		"cssnano": "^6.0.3",
 		"daisyui": "^4.6.0",
-		"postcss": "^8.4.33",
 		"tailwindcss": "^3.4.1"
 	}
 }
