--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ plugins:
   - jekyll-redirect-from
 
 feed:
-  path: blog.atom
+  path: posts.atom
 
 postcss:
   script: node_modules/.bin/postcss
