--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Ohm.codes
 
 author: Mads Ohm Larsen
 
-description: >
+description: |-
   A blog about programming, technology and other things.
 
 baseurl: "" # the subpath of your site, e.g. /blog
